# harmony

./: .gitignore  BUILD.md  CMakeLists.txt  Cargo.toml  MIGRATION_NOTES.md  Makefile  README.md  README_CPP.md  harmony-architecture.puml  harmony-render-flow.puml
.github/workflows/: CI.yml
demo/harmony-demo/: package-lock.json  package.json
demo/harmony-demo/src/components/: HarmonyDemo.tsx
docs/: format.md
include/openai_harmony/: chat.hpp  encoding.hpp  export.hpp  harmony.hpp  registry.hpp  tiktoken.hpp  tiktoken_ext.hpp  utils.hpp
python/openai_harmony/: __init__.py  openai_harmony.pyi
src/: chat.cpp  encoding.cpp  encoding.rs  registry.cpp  registry.rs  tests.rs  tiktoken.cpp  tiktoken_ext.cpp  utils.cpp  wasm_module.rs
src/tiktoken_ext/: public_encodings.rs
test-data/: test_does_not_drop_if_ongoing_analysis.txt
tests/: CMakeLists.txt  test_chat.cpp  test_encoding.cpp  test_harmony.py  test_integration.cpp  test_registry.cpp  test_tiktoken.cpp  test_utils.cpp
